@@ -1,4 +1,4 @@
-/*	$NetBSD: cgi-bozo.c,v 1.25.2.5 2016/04/15 20:24:30 mrg Exp $	*/
+/*	$NetBSD: cgi-bozo.c,v 1.25.2.6 2016/12/23 07:42:09 snj Exp $	*/
 
 /*	$eterna: cgi-bozo.c,v 1.40 2011/11/18 09:21:15 mrg Exp $	*/
 
@@ -333,12 +333,12 @@ parse_search_string(bozo_httpreq_t *request, const char *query, size_t *args_len
 
 parse_err:
 
-	free (*args);
 	free (str);
-	*args = NULL;
+	free (*args);
+	free(args);
 	*args_len = 0;
 
-	return 0;
+	return NULL;
 
 }
 
